# ipclib

./: .gitignore  meson.build  version.py
lib/: meson.build  report.h
proxy/: convert.h  dbusproxy.c  dbusproxy.h  dbusproxyhandler.c  dbusproxyhandler.h  gobjectproxyhandler.c  gobjectproxyhandler.h  meson.build  proxyhandler.h  proxyhandler.vapi  proxyhandlercall.c  proxyhandlercall.h  proxyhandlererror.c  proxyhandlererror.h  report.c  report.h  val2var.c  var2val.c
src/: ipccall.c  ipccall.h  ipcendpoint.c  ipcendpoint.h  ipchandler.c  ipchandler.h  ipclib.h  ipclib.vapi  ipcreplay.c  ipcreplay.h  marshal.list  meson.build
tests/: base.c  base.h  base.vala  core.vala  meson.build  proxy.vala
